@@ -1092,6 +1092,28 @@ public class TownySettings {
 	}
 	
 	public static boolean isValidName(String name) {
+		
+		if (name.toLowerCase() != "spawn"
+				|| name.toLowerCase() != "list"
+				|| name.toLowerCase() != "new"
+				|| name.toLowerCase() != "here"
+				|| name.toLowerCase() != "new"
+				|| name.toLowerCase() != "help"
+				|| name.toLowerCase() != "?"
+				|| name.toLowerCase() != "leave"
+				|| name.toLowerCase() != "withdraw"
+				|| name.toLowerCase() != "deposit"
+				|| name.toLowerCase() != "set"
+				|| name.toLowerCase() != "toggle"
+				|| name.toLowerCase() != "mayor"
+				|| name.toLowerCase() != "assistant"
+				|| name.toLowerCase() != "kick"
+				|| name.toLowerCase() != "add"
+				|| name.toLowerCase() != "claim"
+				|| name.toLowerCase() != "unclaim"
+				|| name.toLowerCase() != "title")
+			return false;
+		
 		try {
 			if (TownySettings.namePattern == null)
 				namePattern = Pattern.compile(getString("NAME_CHECK_REGEX"));
